# xd640

./: COPYING  Makedefs.in  Makefile  README  README.md  config.h.in  configure  configure.in
autom4te.cache/: output.0  traces.0
debian/: changelog  control  copyright  rules
documentation/: Makefile
fl_doc2html/: fl_doc2html  t
fl_filters/: fl_filters
fl_html2html/: fl_html2html  japan.html  t
fl_html2latex/: fl_html2latex
fl_ps2html/: fl_ps2html
fl_rtf2html/: Makefile  README  fl_rtf2html  rtf2html.c  t  test.html  test.rtf
fl_texi2html/: fl_texi2html
fl_txt2html/: fl_txt2html
fl_wp2html/: fl_wp2html
fladder/: Makefile  calc.cpp  gui.cpp  gui.fl  gui.h
flclock/: Makefile  clock.cxx
flclock/po/: Makefile
fldesk/: Makefile  fldesk.cpp  icon.cpp  icon.h  proxy.cpp  proxy.h
fldesk/po/: Makefile  fldesk.pot  fr.po  ja.po
fleffect/: Makefile  effect.cpp  img1.xpm  img2.xpm  img3.xpm
flfile/: Makefile  copy.cpp  copy.h  exec.cpp  link.cpp  link.h  main.cpp  main.h  move.cpp  move.h  properties.cpp  properties.h  unlink.cpp  unlink.h
flfile/po/: Makefile  flfile.pot  flurl.pot  fr.po  ja.po
flfm/: BigIcon.cpp  BigIcon.h  IconCanvas.cpp  IconCanvas.h  IconGroup.cpp  IconGroup.h  IconTree.cpp  IconTree.h  Location.cpp  Location.h  Makefile  SmallIcon.cpp  SmallIcon.h  callbacks.cpp  callbacks.h  gui.cpp  gui.h  main.cpp
flfm/po/: Makefile  flfm.pot  fr.po  ja.po
flfm/xpm/: block.xpm  character.xpm  deb.xpm  exec.xpm  flfm.xpm  folder.xpm  gz.xpm  html.xpm  image.xpm  link.xpm  mblock.xpm  mcharacter.xpm  mexec.xpm  mfolder.xpm  mlink.xpm  mpipe.xpm  msocket.xpm  munknown.xpm  new.xpm  open.xpm  pdf.xpm  pipe.xpm  rpm.xpm  socket.xpm  src.xpm  tar.xpm  txt.xpm  unknown.xpm  up.xpm  wav.xpm
fllauncher/: Makefile  gui.cpp  gui.h  main.cpp
fllauncher/po/: Makefile  fllauncher.pot  fr.po  ja.po
flmail/: Download.cpp  Download.h  MailParser.cpp  MailParser.h  Makefile  Xd6HtmlBrowser.cpp  Xd6HtmlBrowser.h  Xd6HtmlNavigation.cpp  Xd6HtmlNavigation.h  callbacks.cpp  callbacks.h  date.cpp  gui.h  main.cpp  smtp-send  smtp.cpp
flmail/xpm/: fileprint.xpm  mail_forward.xpm  mail_generic.xpm  mail_get.xpm  mail_reply.xpm  mail_replyall.xpm  mail_send.xpm  next.xpm  pencil.xpm  remove.xpm
flmailer/: Makefile  Xd6HtmlBrowser.cpp  Xd6HtmlBrowser.h  gui.cpp  gui.h  main.cpp  rfc822.c
flnotepad/: Makefile  TextEditor.cpp  TextEditor.h  callbacks.cpp  callbacks.h  flnotepad.xpm  gui.cpp  gui.h  main.cpp  mix  t.txt  test.html  test2.html
flnotepad/po/: flnotepad.pot  ja.po
flppp/: Makefile  PppGui.cpp  PppGui.h  flppp.cpp
flppp/po/: Makefile  flppp.pot  fr.po  ja.po
flshutdown/: Makefile  main.cpp
flspider/: Download.cpp  Download.h  Makefile  Xd6HtmlBrowser.cpp  Xd6HtmlBrowser.h  Xd6HtmlNavigation.cpp  Xd6HtmlNavigation.h  callbacks.cpp  callbacks.h  gui.cpp  gui.h  main.cpp
flspider/xpm/: back.xpm  forward.xpm  stop.xpm
flspread/: Makefile  allfunc.htm  main.cpp
fltk-utf8-1.1.1/: Makefile  README  configh.in  configure  configure.in  fltk-utf8-config  fltk-utf8-config.in  fltk-utf8.list  fltk.list  makeinclude.in
fltk-utf8-1.1.1/FL/: Enumerations.H  Fl.H  Fl_Device.H  Fl_Fltk.H  Fl_Gdi.H  Fl_Group.H  Fl_Image.H  Fl_Ps.H  Fl_Widget.H  Flv_Data_Source.H  Flv_List.H  Flve_Combo.H  Makefile  fl_draw.H  fl_utf8.H  win32.H  x.H
fltk-utf8-1.1.1/bc5/: fltk.ide
fltk-utf8-1.1.4/: CREDITS.utf8  Makefile  README.utf8  configh.in  configure  configure.in  fltk-config  fltk-config.in  fltk-utf8.list  makeinclude.in
flwriter/: Mailing.cpp  Mailing.h  Makefile  Xd6HtmlEditor.cpp  Xd6HtmlEditor.h  Xd6HtmlToolbar.cpp  Xd6HtmlToolbar.h  allfunc.htm  at.html  callbacks.cpp  callbacks.h  demo.html  demo1.html  flwriter.xpm  gui.cpp  gui.h  jml.txt  main.cpp  output.ps  png.html  t  t.html  t.rtf  t1.html  t2.html  t3.html  tbl.rtf  test  test.cpp  test.sh  test2.html  tt.html  word.html
share/: Makefile
src/: .Xd6HtmlDownload.cpp.swp  Makefile  Xd6Base64.cpp  Xd6Cancel.cpp  Xd6CfgParser.cpp  Xd6ConfigFile.cpp  Xd6DefaultFonts.cpp  Xd6FindDialog.cpp  Xd6Font2Ps.cpp  Xd6Gif.cpp  Xd6HtmlBlock.cpp  Xd6HtmlDisplay.cpp  Xd6HtmlDownload.cpp  Xd6HtmlFrame.cpp  Xd6HtmlFrame_Drawings.cpp  Xd6HtmlFrame_Edit.cpp  Xd6HtmlFrame_Export.cpp  Xd6HtmlFrame_Handlers.cpp  Xd6HtmlLine.cpp  Xd6HtmlPrint.cpp  Xd6HtmlPrintWin32.cpp  Xd6HtmlScroll.cpp  Xd6HtmlSegment.cpp  Xd6HtmlTagA.cpp  Xd6HtmlTagButton.cpp  Xd6HtmlTagForm.cpp  Xd6HtmlTagImg.cpp  Xd6HtmlTagInputText.cpp  Xd6HtmlTagTable.cpp  Xd6HtmlTagTd.cpp  Xd6HtmlToRtf.cpp  Xd6HtmlView.cpp  Xd6IconWindow.cpp  Xd6IconWindowWin32.cpp  Xd6Jpeg.cpp  Xd6MathMl.cpp  Xd6Png.cpp  Xd6SpellChoice.cpp  Xd6StdWin32.cpp  Xd6SvgTag.cpp  (+14 more)
test/: Makefile  chat.cpp  htmledit.cpp  term.cpp
visualc/: flwriter.dsp  flwriter.vcxproj  flwriter.vcxproj.filters  xd640.dsp  xd640.dsw  xd640.sln
xd640/: Xd6Base64.h  Xd6Cancel.h  Xd6CfgParser.h  Xd6ConfigFile.h  Xd6DefaultFonts.h  Xd6FindDialog.h  Xd6Gif.h  Xd6HtmlBlock.h  Xd6HtmlDisplay.h  Xd6HtmlDownload.h  Xd6HtmlFrame.h  Xd6HtmlLine.h  Xd6HtmlPrint.h  Xd6HtmlScroll.h  Xd6HtmlSegment.h  Xd6HtmlTagA.h  Xd6HtmlTagButton.h  Xd6HtmlTagForm.h  Xd6HtmlTagImg.h  Xd6HtmlTagInputText.h  Xd6HtmlTagTable.h  Xd6HtmlTagTd.h  Xd6HtmlToRtf.h  Xd6HtmlView.h  Xd6IconWindow.h  Xd6Jpeg.h  Xd6MathMl.h  Xd6Png.h  Xd6SpellChoice.h  Xd6Std.h  Xd6SvgTag.h  Xd6System.h  Xd6Tabulator.h  Xd6TextParser.h  Xd6VirtualKeyboard.h  Xd6XmlDtd.h  Xd6XmlParser.h  Xd6XmlStyle.h  Xd6XmlTree.h  Xd6XmlUtils.h
xd640-lib-0.0.12/: Makefile  README  configh.in  configure  configure.in  makeinclude.in
xutf8-0.0.8/: .swp  COPYING  Makefile.am  Makefile.in  Xutf8.h.in  case.c  configure  imKStoUCS.c  keysym2Ucs.c  test.c  test2.c  ucs2fontmap.c  ucs2fontmap.c.mini  utf8Input.c  utf8Utils.c  utf8Wrap.c
xutf8-0.1.1/: Makefile.am  Makefile.in  Xutf8.h.in  aclocal.m4  config.h.in  config.sub  configure  configure.ac  configure.in  ltmain.sh  ucs2fontmap.c  utf8Input.c  utf8Utils.c  utf8Wrap.c
xutf8-0.1.1/debian/: changelog  libxutf8-dev.postinst  libxutf8.prerm  libxutf8.shlibs  rules
xutf8-0.1.1/documentation/: README
(+782 files in other folders)
